# CRUD_Estoque

./: README.md  docker-compose.yml
src/backend/: Dockerfile  main.py  mkdocs.yml  mydb.db  pyproject.toml  utils.py
src/backend/API/: crud.py  router.py
src/backend/data_contract/: schemas.py
src/backend/database/: database_conf.py  models.py
src/backend/docs/: index.md
src/backend/site/: 404.html  index.html
src/backend/site/search/: search_index.json
src/frontend/: Como_Usar.py  Dockerfile  pyproject.toml  utils.py
src/frontend/pages/: 01_Criar_Item.py  02_Visualizar_Itens.py  03_Buscar_Item.py  04_Atualizar Item.py  05_Deletar_Item.py
