[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AngeloGagno",email = "angagelogagno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mkdocs[material] (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.11,<10.0.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)",
    "markdown-include (>=0.8.1,<0.9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
